feat: Implement planet exploration feature
This commit introduces a new feature that allows users to explore planets in the solar system.

Key changes include:

- **Dependency Management:**
    - Added `get_it` for dependency injection.
    - Added `http` for making API calls.
    - Added `mobx`, `flutter_mobx`, and `mobx_codegen` for state management.
    - Added `flutter_earth_globe` for 3D planet rendering.
    - Added `flutter_circular_text` (though not explicitly used in this diff, it's added).
    - Updated `pubspec.lock` with new dependencies and their transitive dependencies.
- **Core Services:**
    - Created `Api` abstract class and `ApiImpl` for handling HTTP GET requests.
- **Dependency Injection:**
    - Set up basic dependency injection using `get_it` in `dependency_injections.dart`.
    - Created `planets_di.dart` to register planet-specific dependencies (DataSource, Repository, Store).
- **Planets Feature:**
    - **Data Layer:**
        - `PlanetsResponse` DTO for parsing API responses.
        - `PlanetsDataSource` interface and `PlanetsDataSourceImpl` to fetch planet data from the "le-systeme-solaire.net" API.
    - **Domain Layer:**
        - `PlanetsEntity` to represent planet data in the application.
        - `PlanetsRepository` interface and `PlanetsRepositoryImpl` to manage planet data and map it to `PlanetsEntity`.
        - `PlanetsMapper` to convert `PlanetsResponse` to `List<PlanetsEntity>`.
        - The repository also associates local image assets with planets.
    - **Presentation Layer:**
        - `PlanetsStore` (MobX store) to manage the state of planets, including fetching and selecting planets. `Earth` is selected by default if available.
        - `PlanetsScreen` widget to display the planets. It uses:
            - `flutter_earth_globe` to render a 3D model of the selected planet with a star background.
            - A `YaruPopupMenuButton` to allow users to select different planets from the fetched list.
            - Display

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -9,15 +9,25 @@ dependencies:
   flutter:
     sdk: flutter
 
-  cupertino_icons: ^1.0.8
+  get_it: ^8.0.3
+  http: ^1.4.0
   yaru: ^8.0.0
+  mobx: ^2.5.0
+  flutter_mobx: ^2.3.0
+  flutter_earth_globe: ^1.0.5
+  flutter_circular_text: ^0.3.1
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
 
   flutter_lints: ^5.0.0
+  build_runner: ^2.4.15
+  mobx_codegen: ^2.7.0
 
 flutter:
 
   uses-material-design: true
+
+  assets:
+    - assets/planets/
