refactor: Update .gitignore and snapcraft configuration; remove unused desktop entry and video file

--- a/.gitignore
+++ b/.gitignore
@@ -18,6 +18,12 @@ migrate_working_dir/
 *.iws
 .idea/
 
+parts/
+stage/
+prime/
+*.snap
+
+
 # The .vscode folder contains launch configuration and tasks you configure in
 # VS Code which you may wish to be included in version control, so this line
 # is commented out by default.
@@ -43,3 +49,5 @@ app.*.map.json
 /android/app/debug
 /android/app/profile
 /android/app/release
+
+
